--- a/blog/composer.json
+++ b/blog/composer.json
@@ -13,7 +13,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "phpoffice/phpspreadsheet": "^1.14",
+        "remember/laravel-spreadsheet": "^0.0.3"
+        
     },
     "require-dev": {
         "facade/ignition": "^2.5",
